Replace custom package-linking with Lerna.

--- a/packages/odo-affix/demos/index.html
+++ b/packages/odo-affix/demos/index.html
@@ -174,8 +174,8 @@ OdoAffix.update();</code></pre>
   <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 
   <!-- Dependencies. -->
-  <script src="../node_modules/@odopod/odo-scroll-animation/dist/odo-scroll-animation.js"></script>
-  <script src="../node_modules/@odopod/odo-window-events/dist/odo-window-events.js"></script>
+  <script src="../../odo-scroll-animation/dist/odo-scroll-animation.js"></script>
+  <script src="../../odo-window-events/dist/odo-window-events.js"></script>
 
   <!-- Minified Source. -->
   <script src="../dist/odo-affix.js"></script>
