--- a/packages/odo-background-video/demos/index.html
+++ b/packages/odo-background-video/demos/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="../../../docs/demo.css" />
   <link rel="stylesheet" href="styles/demo.css" />
   <link rel="stylesheet" href="../css/odo-background-video.css">
-  <link rel="stylesheet" href="../node_modules/@odopod/odo-responsive-images/css/odo-responsive-images.css"/>
-  <link rel="stylesheet" href="../node_modules/@odopod/odo-video/css/odo-video.css"/>
+  <link rel="stylesheet" href="../../odo-responsive-images/css/odo-responsive-images.css"/>
+  <link rel="stylesheet" href="../../odo-video/css/odo-video.css"/>
 </head>
 
 <body>
@@ -98,13 +98,13 @@ var image = instance.imageElement; // getter that returns the DOM image element<
   <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 
   <!-- Dependencies. -->
-  <script src="../node_modules/picturefill/dist/picturefill.min.js"></script>
-  <script src="../node_modules/screenfull/dist/screenfull.js"></script>
-  <script src="../node_modules/@odopod/odo-window-events/dist/odo-window-events.js"></script>
-  <script src="../node_modules/@odopod/odo-object-fit/dist/odo-object-fit.js"></script>
-  <script src="../node_modules/@odopod/odo-viewport/dist/odo-viewport.js"></script>
-  <script src="../node_modules/@odopod/odo-responsive-images/dist/odo-responsive-images.js"></script>
-  <script src="../node_modules/@odopod/odo-video/dist/odo-video.js"></script>
+  <script src="../../odo-responsive-images/node_modules/picturefill/dist/picturefill.min.js"></script>
+  <script src="../../odo-video/node_modules/screenfull/dist/screenfull.js"></script>
+  <script src="../../odo-window-events/dist/odo-window-events.js"></script>
+  <script src="../../odo-object-fit/dist/odo-object-fit.js"></script>
+  <script src="../../odo-viewport/dist/odo-viewport.js"></script>
+  <script src="../../odo-responsive-images/dist/odo-responsive-images.js"></script>
+  <script src="../../odo-video/dist/odo-video.js"></script>
 
   <!-- Minified Source. -->
   <script src="../dist/odo-background-video.js"></script>
