--- a/packages/odo-dialog/demos/index.html
+++ b/packages/odo-dialog/demos/index.html
@@ -410,8 +410,8 @@ button.addEventListener('click', () => {
 
 <!-- Dependencies. -->
 <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-<script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
-<script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.min.js"></script>
+<script src="../../odo-device/dist/odo-device.min.js"></script>
+<script src="../../odo-helpers/dist/odo-helpers.min.js"></script>
 
 <!-- Source. -->
 <script src="../dist/odo-dialog.js"></script>
