--- a/packages/odo-dual-viewer/demos/index.html
+++ b/packages/odo-dual-viewer/demos/index.html
@@ -8,7 +8,7 @@
   <title>Odo Dual Viewer Demo</title>
 
   <link rel="stylesheet" href="../../../docs/demo.css" />
-  <link rel="stylesheet" href="../node_modules/@odopod/odo-draggable/css/odo-draggable.css" />
+  <link rel="stylesheet" href="../../odo-draggable/css/odo-draggable.css" />
   <link rel="stylesheet" href="styles/demo.css" />
   <link rel="stylesheet" href="../css/odo-dual-viewer.css" />
   <link rel="stylesheet" href="../css/odo-dual-viewer-theme.css" />
@@ -399,12 +399,12 @@ U = upper zone
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-window-events/dist/odo-window-events.min.js"></script>
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.min.js"></script>
-  <script src="../node_modules/@odopod/odo-pointer/dist/odo-pointer.min.js"></script>
-  <script src="../node_modules/@odopod/odo-draggable/dist/odo-draggable.min.js"></script>
-  <script src="../node_modules/@odopod/odo-object-fit/dist/odo-object-fit.min.js"></script>
+  <script src="../../odo-window-events/dist/odo-window-events.min.js"></script>
+  <script src="../../odo-device/dist/odo-device.min.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.min.js"></script>
+  <script src="../../odo-pointer/dist/odo-pointer.min.js"></script>
+  <script src="../../odo-draggable/dist/odo-draggable.min.js"></script>
+  <script src="../../odo-object-fit/dist/odo-object-fit.min.js"></script>
 
   <!-- Source. -->
   <script src="../dist/odo-dual-viewer.js"></script>
