--- a/packages/odo-helpers/demos/index.html
+++ b/packages/odo-helpers/demos/index.html
@@ -935,7 +935,7 @@ console.log('pointer move event name: ' + events.POINTERMOVE);</code></pre>
   <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 
   <!-- Dependencies. -->
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
+  <script src="../../odo-device/dist/odo-device.min.js"></script>
 
   <!-- Minified Source. -->
   <script src="../dist/odo-helpers.js"></script>
