--- a/packages/odo-on-swipe/demos/index.html
+++ b/packages/odo-on-swipe/demos/index.html
@@ -68,9 +68,9 @@
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.min.js"></script>
-  <script src="../node_modules/@odopod/odo-pointer/dist/odo-pointer.min.js"></script>
+  <script src="../../odo-device/dist/odo-device.min.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.min.js"></script>
+  <script src="../../odo-pointer/dist/odo-pointer.min.js"></script>
 
   <!-- Minified Source. -->
   <script src="../dist/odo-on-swipe.min.js"></script>
