--- a/packages/odo-pointer/demos/index.html
+++ b/packages/odo-pointer/demos/index.html
@@ -94,8 +94,8 @@
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.js"></script>
+  <script src="../../odo-device/dist/odo-device.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.js"></script>
 
   <!-- Minified Source. -->
   <script src="../dist/odo-pointer.js"></script>
