--- a/packages/odo-responsive-attributes/demos/index.html
+++ b/packages/odo-responsive-attributes/demos/index.html
@@ -111,7 +111,7 @@ new Clamper(document.getElementById('clamper'));</code></pre>
 
   <!-- Dependencies -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-base-component/dist/odo-base-component.js"></script>
+  <script src="../../odo-base-component/dist/odo-base-component.js"></script>
 
   <!-- Source. -->
   <script src="../dist/odo-responsive-attributes.js"></script>
