--- a/packages/odo-responsive-classes/demos/index.html
+++ b/packages/odo-responsive-classes/demos/index.html
@@ -66,8 +66,8 @@
 
   <!-- Dependencies -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-base-component/dist/odo-base-component.js"></script>
-  <script src="../node_modules/@odopod/odo-responsive-attributes/dist/odo-responsive-attributes.js"></script>
+  <script src="../../odo-base-component/dist/odo-base-component.js"></script>
+  <script src="../../odo-responsive-attributes/dist/odo-responsive-attributes.js"></script>
 
   <!-- Source. -->
   <script src="../dist/odo-responsive-classes.js"></script>
