--- a/packages/odo-responsive-images/demos/performance-test.html
+++ b/packages/odo-responsive-images/demos/performance-test.html
@@ -76,8 +76,8 @@
   <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 
   <!-- Dependencies -->
-  <script src="../node_modules/@odopod/odo-window-events/dist/odo-window-events.min.js"></script>
-  <script src="../node_modules/@odopod/odo-viewport/dist/odo-viewport.js"></script>
+  <script src="../../odo-window-events/dist/odo-window-events.min.js"></script>
+  <script src="../../odo-viewport/dist/odo-viewport.js"></script>
   <script src="../node_modules/picturefill/dist/picturefill.min.js"></script>
 
   <!-- Minified Source. -->
