--- a/packages/odo-reveal/demos/index.html
+++ b/packages/odo-reveal/demos/index.html
@@ -10,7 +10,7 @@
   <!-- Syntax Highlighter -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.4.1/themes/prism.css">
   <link rel="stylesheet" href="../../../docs/demo.css" />
-  <link rel="stylesheet" href="../node_modules/@odopod/odo-responsive-images/css/odo-responsive-images.css" />
+  <link rel="stylesheet" href="../../odo-responsive-images/css/odo-responsive-images.css" />
   <link rel="stylesheet" href="styles/demo.css" />
   <link rel="stylesheet" href="../css/odo-reveal.css" />
 
@@ -130,14 +130,14 @@
   <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 
   <!-- Dependencies. -->
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.min.js"></script>
-  <script src="../node_modules/@odopod/odo-window-events/dist/odo-window-events.min.js"></script>
-  <script src="../node_modules/@odopod/odo-viewport/dist/odo-viewport.min.js"></script>
+  <script src="../../odo-device/dist/odo-device.min.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.min.js"></script>
+  <script src="../../odo-window-events/dist/odo-window-events.min.js"></script>
+  <script src="../../odo-viewport/dist/odo-viewport.min.js"></script>
 
   <!-- Only for demos -->
   <script src="../node_modules/picturefill/dist/picturefill.min.js"></script>
-  <script src="../node_modules/@odopod/odo-responsive-images/dist/odo-responsive-images.min.js"></script>
+  <script src="../../odo-responsive-images/dist/odo-responsive-images.min.js"></script>
 
   <!-- Source. -->
   <script src="../dist/odo-reveal.js"></script>
