--- a/packages/odo-sticky-headers/demos/index.html
+++ b/packages/odo-sticky-headers/demos/index.html
@@ -286,8 +286,8 @@ stickyMananger.add(stickies);</code></pre>
   <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 
   <!-- Dependencies -->
-  <script src="../node_modules/@odopod/odo-scroll-animation/dist/odo-scroll-animation.min.js"></script>
-  <script src="../node_modules/@odopod/odo-window-events/dist/odo-window-events.min.js"></script>
+  <script src="../../odo-scroll-animation/dist/odo-scroll-animation.min.js"></script>
+  <script src="../../odo-window-events/dist/odo-window-events.min.js"></script>
 
   <!-- Source. -->
   <script src="../dist/odo-sticky-headers.js"></script>
