--- a/packages/odo-viewport/demos/index.html
+++ b/packages/odo-viewport/demos/index.html
@@ -195,7 +195,7 @@ OdoViewport.remove(enterExitId);</code></pre>
   <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 
   <!-- Dependencies. -->
-  <script src="../node_modules/@odopod/odo-window-events/dist/odo-window-events.min.js"></script>
+  <script src="../../odo-window-events/dist/odo-window-events.min.js"></script>
 
   <!-- Minified Source. -->
   <script src="../dist/odo-viewport.js"></script>
