--- a/packages/odo-carousel/demos/index.html
+++ b/packages/odo-carousel/demos/index.html
@@ -690,10 +690,10 @@ OdoCarousel.template("Today is {{ day }}", {
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.min.js"></script>
-  <script src="../node_modules/@odopod/odo-pointer/dist/odo-pointer.min.js"></script>
-  <script src="../node_modules/@odopod/odo-draggable/dist/odo-draggable.min.js"></script>
+  <script src="../../odo-device/dist/odo-device.min.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.min.js"></script>
+  <script src="../../odo-pointer/dist/odo-pointer.min.js"></script>
+  <script src="../../odo-draggable/dist/odo-draggable.min.js"></script>
 
   <!-- Source. -->
   <script src="../dist/odo-carousel.js"></script>
