--- a/packages/odo-draggable/demos/index.html
+++ b/packages/odo-draggable/demos/index.html
@@ -337,9 +337,9 @@ instance.on(OdoDraggable.EventType.END, function (pointerEvent) {
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.min.js"></script>
-  <script src="../node_modules/@odopod/odo-pointer/dist/odo-pointer.min.js"></script>
+  <script src="../../odo-device/dist/odo-device.min.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.min.js"></script>
+  <script src="../../odo-pointer/dist/odo-pointer.min.js"></script>
 
   <!-- Minified Source. -->
   <script src="../dist/odo-draggable.js"></script>
