--- a/packages/odo-dropdown/demos/index.html
+++ b/packages/odo-dropdown/demos/index.html
@@ -285,9 +285,9 @@ dropdown.dispose()</code></pre>
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.js"></script>
-  <script src="../node_modules/@odopod/odo-base-component/dist/odo-base-component.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.js"></script>
+  <script src="../../odo-device/dist/odo-device.js"></script>
+  <script src="../../odo-base-component/dist/odo-base-component.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.js"></script>
 
   <!-- Minified Source. -->
   <script src="../dist/odo-dropdown.js"></script>
