--- a/packages/odo-tabs/demos/index.html
+++ b/packages/odo-tabs/demos/index.html
@@ -153,9 +153,9 @@
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.min.js"></script>
-  <script src="../node_modules/@odopod/odo-window-events/dist/odo-window-events.min.js"></script>
+  <script src="../../odo-device/dist/odo-device.min.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.min.js"></script>
+  <script src="../../odo-window-events/dist/odo-window-events.min.js"></script>
 
   <!-- Source. -->
   <script src="../dist/odo-tabs.js"></script>
