--- a/packages/odo-tap/demos/index.html
+++ b/packages/odo-tap/demos/index.html
@@ -79,9 +79,9 @@
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
-  <script src="../node_modules/@odopod/odo-device/dist/odo-device.min.js"></script>
-  <script src="../node_modules/@odopod/odo-helpers/dist/odo-helpers.min.js"></script>
-  <script src="../node_modules/@odopod/odo-pointer/dist/odo-pointer.min.js"></script>
+  <script src="../../odo-device/dist/odo-device.min.js"></script>
+  <script src="../../odo-helpers/dist/odo-helpers.min.js"></script>
+  <script src="../../odo-pointer/dist/odo-pointer.min.js"></script>
 
   <!-- Source. -->
   <script src="../dist/odo-tap.js"></script>
