Helpers: docs fix #5

--- a/packages/odo-helpers/demos/index.html
+++ b/packages/odo-helpers/demos/index.html
@@ -382,7 +382,7 @@ console.log(start.y); // 50</code></pre>
           <h3>distance(a, b)</h3>
           <p>Calculate the distance between two coordinates.</p>
           <pre><code class="language-javascript">var end = new Coordinate(50, 100);
-Coordinate.difference(start, end); // -64.03</code></pre>
+Coordinate.distance(start, end); // -64.03</code></pre>
         </div>
 
         <div class="example">
