Updating code to use only a single data attribute for triggers and targets to reduce complexity

--- a/packages/odo-expandable/demos/demo.html
+++ b/packages/odo-expandable/demos/demo.html
@@ -17,52 +17,52 @@
       <div class="container">
         <div class="demo">
           <h1>Single</h1>
-          <button class="expandable__trigger" href="#" data-expandable-trigger data-expandable-id="demo-expand-1">Trigger 1</button>
-          <div class="expandable__target" data-expandable-target data-expandable-id="demo-expand-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" href="#" data-expandable-trigger="demo-expand-1">Trigger 1</button>
+          <div class="expandable__target" data-expandable-target="demo-expand-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
         </div>
         <div class="demo">
           <h1>Single</h1>
-          <button class="expandable__trigger" href="#" data-expandable-trigger data-expandable-id="demo-expand-2">Trigger 2</button>
-          <div class="expandable__target" data-expandable-target data-expandable-id="demo-expand-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" href="#" data-expandable-trigger="demo-expand-2">Trigger 2</button>
+          <div class="expandable__target" data-expandable-target="demo-expand-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
           dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
           non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
         </div>
         <div class="demo">
           <h1>Group (first expanded)</h1>
-          <button class="expandable__trigger" href="#" data-expandable-trigger data-expandable-id="demo-expand-3" data-expandable-group="demo-group-1">Trigger 3</button>
-          <div class="expandable__target expandable__target--open" data-expandable-target data-expandable-id="demo-expand-3" data-expandable-group="demo-group-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" href="#" data-expandable-trigger="demo-expand-3" data-expandable-group="demo-group-1">Trigger 3</button>
+          <div class="expandable__target expandable__target--open" data-expandable-target="demo-expand-3" data-expandable-group="demo-group-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
           dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
           non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-          <button class="expandable__trigger" href="#" data-expandable-trigger data-expandable-id="demo-expand-4" data-expandable-group="demo-group-1">Trigger 4</button>
-          <div class="expandable__target" data-expandable-target data-expandable-id="demo-expand-4" data-expandable-group="demo-group-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" href="#" data-expandable-trigger="demo-expand-4" data-expandable-group="demo-group-1">Trigger 4</button>
+          <div class="expandable__target" data-expandable-target="demo-expand-4" data-expandable-group="demo-group-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
           dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
           non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-          <button class="expandable__trigger" href="#" data-expandable-trigger data-expandable-id="demo-expand-5" data-expandable-group="demo-group-1">Trigger 5</button>
-          <div class="expandable__target" data-expandable-target data-expandable-id="demo-expand-5" data-expandable-group="demo-group-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" href="#" data-expandable-trigger="demo-expand-5" data-expandable-group="demo-group-1">Trigger 5</button>
+          <div class="expandable__target" data-expandable-target="demo-expand-5" data-expandable-group="demo-group-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
           dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
           non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
         </div>
         <div class="demo">
           <h1>Group (none expanded)</h1>
-          <button class="expandable__trigger" href="#" data-expandable-trigger data-expandable-id="demo-expand-6" data-expandable-group="demo-group-2">Trigger 6</button>
-          <div class="expandable__target" class="expandable__target expandable__target--open" data-expandable-target data-expandable-id="demo-expand-6" data-expandable-group="demo-group-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" href="#" data-expandable-trigger="demo-expand-6" data-expandable-group="demo-group-2">Trigger 6</button>
+          <div class="expandable__target" class="expandable__target expandable__target--open" data-expandable-target="demo-expand-6" data-expandable-group="demo-group-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-          <button class="expandable__trigger" href="#" data-expandable-trigger data-expandable-id="demo-expand-7" data-expandable-group="demo-group-2">Trigger 7</button>
-          <div class="expandable__target" data-expandable-target data-expandable-id="demo-expand-7" data-expandable-group="demo-group-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" href="#" data-expandable-trigger="demo-expand-7" data-expandable-group="demo-group-2">Trigger 7</button>
+          <div class="expandable__target" data-expandable-target="demo-expand-7" data-expandable-group="demo-group-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-          <button class="expandable__trigger" href="#" data-expandable-trigger data-expandable-id="demo-expand-8" data-expandable-group="demo-group-2">Trigger 8</button>
-          <div class="expandable__target" data-expandable-target data-expandable-id="demo-expand-8" data-expandable-group="demo-group-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" href="#" data-expandable-trigger="demo-expand-8" data-expandable-group="demo-group-2">Trigger 8</button>
+          <div class="expandable__target" data-expandable-target="demo-expand-8" data-expandable-group="demo-group-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
